@@ -9,13 +9,13 @@ role PDF::OutputIntent
     does PDF::COS::Tie::Hash
     does PDF::Class::Type['Type', 'S'] {
 
+    # See [PDF 32000 Table 365 – Entries in an output intent dictionary]
     use PDF::COS::Tie;
     use PDF::COS::Name;
     use PDF::COS::TextString;
     use PDF::COS::Stream;
     has PDF::COS::Name $.Type is entry where 'OutputIntent';
-    has PDF::COS::Name $.S is entry(:required) where 'GTS_PDFX'|'GTS_PDFA1'|'ISO_PDFE1'; #| (Required) The output intent subtype; must be GTS_PDFX for a PDF/X output intent.
-    # See [PDF 32000 Table 365 – Entries in an output intent dictionary]
+    has PDF::COS::Name $.S is entry(:required); #| Required) The output intent subtype; shall be either one of GTS_PDFX, GTS_PDFA1, ISO_PDFE1 or a key defined by an ISO 32000 extension.
 
     has Str $.OutputCondition is entry;                       #| (Optional) An ASCII string concisely identifying the intended output device or production condition in human-readable form
     has Str $.OutputConditionIdentifier is entry(:required);  #| (Required) An ASCII string identifying the intended output device or production condition in human- or machine-readable form.
