@@ -14,7 +14,7 @@ endobj
     /Font <<
       /F1 7 0 R
     >>
-    /Procset [ /PDF /Text ]
+    /ProcSet [ /PDF /Text ]
   >>
 >>
 endobj
