@@ -14,7 +14,7 @@ endobj
     /Pattern <<
       /Pt1 5 0 R
     >>
-    /Procset [ /PDF /Text ]
+    /ProcSet [ /PDF /Text ]
   >>
 >>
 endobj
