@@ -12,7 +12,7 @@ endobj
   /Kids [ 3 0 R 5 0 R ]
   /MediaBox [ 0 0 220 220 ]
   /Resources <<
-    /Procset [ /PDF /Text ]
+    /ProcSet [ /PDF /Text ]
     /XObject <<
       /Fm1 7 0 R
     >>
