@@ -11,7 +11,7 @@ endobj
   /Count 0
   /Kids [  ]
   /Resources <<
-    /Procset [ /PDF /Text ]
+    /ProcSet [ /PDF /Text ]
   >>
 >>
 endobj
